--- a/styles/home.css
+++ b/styles/home.css
@@ -1,7 +1,7 @@
 .content {
     display: grid;
     grid-template-columns: 55% 45%;
-    grid-template-rows: 11.4rem 1fr;
+    grid-template-rows: 10rem, 1fr;
     grid-template-areas: 
     'header header'
     'left right'
@@ -13,16 +13,17 @@ header {
 
 
 #bg {
+    margin-top: -20rem;
     grid-area: left;
     background: url('/assets/home-bg-img.svg') no-repeat top/contain;
+    background-position-x: -5rem;
 }
 
 main {
     grid-area: right;
-}
-
-main .container {
-    width: min(36.3rem 100%);
+    align-items: center;
+    width: 35rem;
+    margin-top: -10rem;
 }
 
 main h2 {
@@ -38,5 +39,25 @@ input {
 
 input, button, .button {
     width: 100%;
-    margin-botton: 1.8rem
+    margin-bottom: 1.4rem
+}
+
+.separator {
+    display: flex;
+    align-items: center;
+    padding-bottom: 1.2rem;    
+}
+
+.separator div:nth-child(2) {
+    width: 108rem;
+    text-align: center;
+    color: var(--grey-blue);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+}
+
+.separator div:nth-child(1), .separator div:nth-child(3){
+    background: var(--grey-blue);
+    width: 100%;
+    height: 1px;
 }
