add circulos com opacidade na home page

--- a/styles/home.css
+++ b/styles/home.css
@@ -30,6 +30,7 @@ main h2 {
     font-family: 'Poppins', sans-serif;
     color: var(--black);
     font-size: clamp(2.0rem, 5vw, 2.8rem);
+    margin-bottom: 0.5rem;
 }
 
 input {
@@ -60,4 +61,26 @@ input, button, .button {
     background: var(--grey-blue);
     width: 100%;
     height: 1px;
+}
+
+.ball-top {
+    background-color: var(--blue);
+    width: 56rem;
+    height: 56rem;
+    position: fixed;
+    clip-path: circle();
+    top: -35rem;
+    right: -36rem;
+    opacity: 0.15;
+}
+
+.ball-bottom {
+    background-color: var(--blue);
+    width: 23rem;
+    height: 23rem;
+    position: fixed;
+    clip-path: circle();
+    bottom: -17rem;
+    right: 5rem;
+    opacity: 0.23;
 }
