--- a/styles/create-room.css
+++ b/styles/create-room.css
@@ -13,7 +13,7 @@ header {
 
 
 #bg {
-    margin-top: -19.8rem;
+    margin-top: -25rem;
     grid-area: left;
     background: url('/assets/home-bg-img.svg') no-repeat top/contain;
     background-position-x: -5rem;
@@ -38,29 +38,9 @@ input {
     padding: 0 1.6rem;
 }
 
-input, button, .button {
+input, button {
     width: 100%;
     margin-bottom: 1.4rem
-}
-
-.separator {
-    display: flex;
-    align-items: center;
-    padding-bottom: 1.2rem;    
-}
-
-.separator div:nth-child(2) {
-    width: 108rem;
-    text-align: center;
-    color: var(--grey-blue);
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-}
-
-.separator div:nth-child(1), .separator div:nth-child(3){
-    background: var(--grey-blue);
-    width: 100%;
-    height: 1px;
 }
 
 .ball-top {
